--- a/IPSec/config/right.conf
+++ b/IPSec/config/right.conf
@@ -1,12 +1,12 @@
 conn mysubnet
     leftid=10.110.156.55
     left=10.110.156.55
-    leftsourceip=192.168.2.254
     leftsubnet=192.168.2.0/24
     rightid=10.110.156.13
     right=10.110.156.13
-    rightsourceip=192.168.1.254
     rightsubnet=192.168.1.0/24
+	ike=aes256-md5-modp2048
+	esp=aes256-md5-modp2048
     auto=start
     authby=secret
     type=tunnel
